--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.card{
+ 
+border: 1px black;
+box-shadow: rgb(0, 0, 0);
+border-radius: 10px;
+padding: 30px;
+margin: 10px;
+text-align: center;
+max-width: 250px;
+display: inline-block;
 }
+.card .card-image{
+max-width: 100%;
+height: auto;
+margin-bottom: 10px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
